--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.3.0",
+    "node": "^20.2.0",
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
